# CSU-Software-Engineering-Project

./: .gitmodules  CMakeLists.txt  README.md
videoEditorProject/: CMakeLists.txt  main.cpp  videoEditorProject.cpp  videoEditorProject.h
